fix home fading not stretching to full height

--- a/web/src/components/pages/home/hero.css
+++ b/web/src/components/pages/home/hero.css
@@ -250,7 +250,7 @@
         width: 100%;
         height: 100%;
         background: url('images/fading.svg');
-        background-size: 100%;
+        background-size: 100% 100%;
         pointer-events: none;
     }
 
